--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,21 @@
   background-color: white !important;
   padding: 2.5rem 1rem;
 }
+
+.accordion {
+  /* border: 1px solid lightgray; */
+  border-radius: 4px;
+  padding: 0.75rem;
+  margin: 0.75rem;
+}
+
+.card {
+  padding: 0.75rem;
+  margin: 0.75rem !important;
+}
+.card div {
+  display: inline;
+}
+.card-header {
+  border-bottom: none !important;
+}
