--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,27 @@
 .main {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: center;
   margin: 0 auto !important;
   margin-top: 7% !important;
-  width: 60%;
+  width: 75%;
   height: max-content;
-  border-radius: 3px !important;
+  border-radius: 5px !important;
   background-color: white !important;
   padding: 2.5rem 1rem;
 }
 
+.main h3 {
+  line-height: 1.5;
+}
+
+.row h6 {
+  display: inline;
+  font-weight: 600;
+}
+
 .accordion {
-  /* border: 1px solid lightgray; */
-  border-radius: 4px;
+  border-radius: 5px !important;
   padding: 0.75rem;
   margin: 0.75rem;
 }
@@ -22,9 +30,17 @@
   padding: 0.75rem;
   margin: 0.75rem !important;
 }
-.card div {
-  display: inline;
-}
+
 .card-header {
   border-bottom: none !important;
+}
+
+button {
+  border: none;
+  float: right;
+}
+
+.fa-plus-circle {
+  font-size: 22px;
+  color: dimgray;
 }
