--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 
 .main h3 {
   line-height: 1.5;
+  font-weight: 600;
 }
 
 .row h6 {
@@ -29,6 +30,8 @@
 .card {
   padding: 0.75rem;
   margin: 0.75rem !important;
+  border-radius: 5px !important;
+  border: 1px solid rgb(0, 0, 0, 0.175) !important;
 }
 
 .card-header {
